# Sasanqua

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
fpga/design/core/src/gui/: Cargo.toml  README.md  build.rs
fpga/design/core/src/gui/src/: macros.rs  main.rs
fpga/design/core/src/gui/ui/: Main.slint
hw/cop/: .gitignore  Cargo.toml  Makefile
hw/cop/copgen/: Cargo.toml
hw/cop/copgen/src/: lib.rs
hw/cop/copgen/src/pkg/: gen.rs
hw/cop/src/: main.rs
hw/cop/ui/cui/: Cargo.toml
hw/cop/ui/cui/src/cmd/: interactive.rs
hw/cop/ui/gui/: Cargo.toml
hw/cop/ui/gui/slint/: Main.slint
hw/core/: .gitignore  Cargo.toml  Makefile  README.md
hw/core/coregen/: Cargo.toml
hw/core/coregen/hw_parts/core/: core.v
hw/core/coregen/src/: lib.rs
hw/core/coregen/src/factory/: core.rs  mem.rs
hw/core/coregen/src/sasanqua/: bus.rs
hw/core/coregen/src/sasanqua/bus/: axi.rs
hw/core/ui/cui/: Cargo.toml
hw/core/ui/cui/src/: lib.rs
hw/core/ui/gui/: Cargo.toml  build.rs
hw/core/ui/gui/src/: lib.rs
hw/core/ui/gui/src/event/: generate.rs
hw_design/design/cop/: .gitignore  Cargo.toml  Makefile  README.md
hw_design/design/cop/chisel/: Cargo.toml
hw_design/design/cop/chisel/src/: main.rs
hw_design/design/cop/copgen/: Cargo.toml
hw_design/design/cop/copgen/src/: lib.rs  pkg.rs  profile.rs
hw_design/design/cop/copgen/src/pkg/: gen.rs
hw_design/design/cop/copgen/src/profile/: cop_impl.rs  inst.rs
hw_design/design/cop/copgen/template/src/: cop.v  cop_dec_module.v
hw_design/design/cop/hw/src/: cop.v  cop_dec_module.v  cop_impl.v
hw_design/design/cop/hw/src/impl/: rv32i_mini.v
hw_design/design/cop/impl/chisel/: README.md
hw_design/design/cop/impl/std/: Cargo.toml  README.md
hw_design/design/cop/impl/std/src/: lib.rs
hw_design/design/cop/impl/verilog/: Cargo.toml  README.md
hw_design/design/cop/impl/verilog/src/: lib.rs
hw_design/design/cop/src/: check.rs  cop_impl.rs  gen.rs  inst.rs  lib.rs  main.rs  pkg.rs  profile.rs  template.rs
hw_design/design/cop/src/cui/: Cargo.toml  README.md
hw_design/design/cop/src/cui/src/: cmd.rs  main.rs
hw_design/design/cop/src/pkg/: check.rs  gen.rs
hw_design/design/cop/src/profile/: cop_impl.rs  gen.rs
hw_design/design/cop/std/: Cargo.toml
hw_design/design/cop/std/src/: main.rs
hw_design/design/cop/template/src/: cop_dec_module.v
hw_design/design/cop/verilog/: Cargo.toml
hw_design/design/cop/verilog/hw/src/: sasanqua_cop.v
hw_design/design/cop/verilog/src/: main.rs
hw_design/design/core/src/cui/: Cargo.toml  README.md
hw_design/design/core/src/cui/src/: cmd.rs  main.rs
ide/: Cargo.toml  Makefile  README.md
ide/core/core/: Cargo.toml
ide/core/core/src/: lib.rs
ide/core/core_command/: Cargo.toml
ide/core/core_command/src/: lib.rs
ide/core/core_ipc/: Cargo.toml
ide/core/core_ipc/src/: child.rs  lib.rs  parent.rs
ide/core/core_runner/: Cargo.toml
ide/core/core_runner/src/: lib.rs
ide/cui/: Cargo.toml
ide/cui/src/: lib.rs
ide/examples/: Cargo.toml
ide/examples/pgen/: pgen_any.rs  pgen_simple.rs  pgen_xilinx.rs
ide/fpga_synth/fpga_synth/: Cargo.toml
ide/fpga_synth/fpga_synth_job/job/: Cargo.toml
ide/fpga_synth/fpga_synth_job/job_xilinx/: Cargo.toml
ide/fpga_synth/fpga_synth_worker/worker/: Cargo.toml
ide/fpga_synth/fpga_synth_worker/worker_http/: Cargo.toml
ide/fpga_synth/fpga_synth_worker/worker_job/: Cargo.toml
ide/fpga_synth/fpga_synth_worker/worker_rlib/: Cargo.toml
ide/front/cui/: Cargo.toml
ide/front/cui/src/: main.rs
ide/front/gui/: Cargo.toml  Makefile  README.md
ide/front/gui/.cargo/: config.toml
ide/front/gui/event/event/: Cargo.toml
ide/front/gui/launcher/: Cargo.toml
ide/front/gui/launcher/src/: main.rs
ide/front/gui/launcher_macros/macros/: Cargo.toml
ide/front/gui/launcher_macros/macros/src/: lib.rs
ide/front/gui/launcher_macros/macros_declarative/: Cargo.toml
ide/front/gui/launcher_macros/macros_procedural/: Cargo.toml
ide/front/gui/macros/macros/: Cargo.toml
ide/front/gui/ui/: Cargo.toml  build.rs
ide/front/gui/ui/design/: Main.slint
ide/front/gui/ui/design/pages/: CopPkg.slint  (+9 more)
ide/front/gui_new/: README.md
ide/front/gui_new/src/: main.rs
ide/front/gui_new/ui/src-js/: package-lock.json
ide/gui/: Cargo.toml
ide/gui/impl/src-js/: Makefile
ide/gui/impl/src-rs/: Cargo.toml
ide/gui/impl/src-rs/src/: lib.rs
ide/gui/src/: lib.rs
ide/gui/src-rs/: Cargo.toml  build.rs  tauri.conf.json
ide/job/job/: Cargo.toml
ide/job/job_xilinx/: Cargo.toml
ide/pgenerator/pgen/: Cargo.toml
ide/pgenerator/pgen/src/: lib.rs
ide/pgenerator/pgen_driver/: Cargo.toml
ide/pgenerator/pgen_driver/src/: lib.rs
ide/pgenerator/pgen_hwgen/: Cargo.toml
ide/pgenerator/pgen_hwgen/src/: factory.rs  lib.rs  prelude.rs  resources.rs  sasanqua.rs
ide/pgenerator/pgen_hwgen/src/factory/: core.rs  mmu.rs  sasanqua.rs
ide/pgenerator/pgen_hwgen/src/sasanqua/: bus.rs
ide/pgenerator/pgen_ipgen/: Cargo.toml
ide/pgenerator/pgen_ipgen/src/: lib.rs  prelude.rs  utils.rs  vendor.rs
ide/pgenerator/pgen_ipgen/src/utils/: ip_xact.rs
ide/server/: Cargo.toml  README.md
ide/server/job/job_job/: Cargo.toml
ide/server/job/job_job/src/: lib.rs
ide/server/src/http/: Cargo.toml
ide/server/src/rlib/: Cargo.toml
ide/server/src/rlib/src/: lib.rs
ide/server/worker/http/: Cargo.toml
ide/server/worker/rlib/: Cargo.toml
ide/server/worker/rlib/src/: lib.rs
ide/src/: main.rs
ide/src/cui/: Cargo.toml  Makefile
ide/src/gui/: Cargo.toml  README.md
ide/src/gui/.cargo/: config.toml
ide/src/gui/src/: main.rs
ide/src/gui/ui/: build.rs
ide/src/gui_new/: Cargo.toml
ide/src/gui_new/ui/src-js/: next.config.js
ide/src/gui_new/ui/src-rs/: Cargo.toml
ide/tui/: Cargo.toml
ide/ui/cui/: Cargo.toml
ide/ui/cui/src/: lib.rs
ide/ui/gui/: Cargo.toml
ide/ui/gui/impl/src-js/: package.json
ide/ui/gui/src/: lib.rs
ide/ui/tui/: Cargo.toml
ide/ui/tui/src/: lib.rs
ide/worker/: README.md
ide/worker/worker/: Cargo.toml
ide/worker/worker_job/: Cargo.toml
ide/worker/worker_rlib/: Cargo.toml
sw/apps/helloworld/: Cargo.toml
(+576 files in other folders)
