[package]
name = "ide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
core = { path = "./core/core" }
cui = { path = "./cui", optional = true }
tui = { path = "./tui", optional = true }
gui = { path = "./gui", optional = true }

[features]
default = []
cui = ["dep:cui"]
tui = ["dep:tui"]
gui = ["dep:gui"]

[workspace]
resolver = "2"
members = [
    # Core
    "core/core",

    # FPGA Synth Server
    "fpga_synth/fpga_synth",

    # UI
    "cui",
    "tui",
    "gui",
]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = "1.0.193"
