[package]
name = "ide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
core = { package = "ide_core", path = "./core/core" }
cui = { package = "ide_cui", path = "./ui/cui", optional = true }
tui = { package = "ide_tui", path = "./ui/tui", optional = true }
gui = { package = "ide_gui", path = "./ui/gui", optional = true }

[features]
default = []
cui = ["dep:cui"]
tui = ["dep:tui"]
gui = ["dep:gui"]
