[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
pgen = { package = "pgen", path = "../pgenerator/pgen" }

[[example]]
name = "pgen_xilinx"
path = "pgen/pgen_xilinx.rs"

[[example]]
name = "pgen_any"
path = "pgen/pgen_any.rs"
