[package]
name = "ide_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
command = { package = "core_command", path = "../core_command" }
runner = { package = "core_runner", path = "../core_runner" }
ipc = { package = "core_ipc", path = "../core_ipc" }
