[package]
name = "coregen_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
slint = "1.3"
rfd = "0.10"
ipgen = { package = "ipgen", path = "../../../tools/ipgen" }
coregen = { package = "coregen", path = "../../coregen" }

[build-dependencies]
slint-build = "1.3"
