[package]
name = "coregen_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
slint = "1.3"
rfd = "0.12"
ipgen = { package = "ipgen", path = "../../../tools/ipgen" }
coregen = { package = "coregen", path = "../../coregen" }

[build-dependencies]
slint-build = "1.3"
