[package]
name = "coregen_cui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
vfs = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "3.1", features = ["derive"] }
ansi_term = "0.12"
ipgen = { package = "ipgen", path = "../../../tools/ipgen" }
coregen = { package = "coregen", path = "../../coregen" }
