[package]
name = "launcher_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
macros_decralative = { package = "macros_declarative", path = "../macros_declarative" }
macros_procedural = { package = "macros_procedural", path = "../macros_procedural" }
